syntax = "proto3";
option go_package = "./pb";

message Category {
  int64 id = 1;
  string name = 2;
}

service CategoriesService {
  rpc GetAllCategories (GetAllCategoriesRequest) returns (stream GetAllCategoriesResponse) {}
  rpc AddCategory (stream AddCategoryRequest) returns (stream AddCategoryResponse) {}
}

message GetAllCategoriesRequest {
}

message GetAllCategoriesResponse {
  repeated Category categories = 1;
}

message AddCategoryRequest {
  string name = 1;
}

message AddCategoryResponse {
  int64 id = 1;
  string name = 2;
}